# final-project-of-declarative-programming

./: .gitignore  LICENSE  README.md  main.hs  matcominesweeper.cabal  run.bat  run.sh
docs/: REPORTE.md
src/: Board.hs  Config.hs  Events.hs  Main.hs  Render.hs  Types.hs
